--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -14,12 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     # if: github.repository == 'SocialSisterYi/bilibili-API-collect'
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v6
       with:
         fetch-depth: 0
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v4.0.3
+    - uses: actions/setup-node@v6
       with:
         node-version: 22
         cache: yarn
