Update CI workflow to trigger on master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,31 +3,19 @@ name: CI
 on:
   push:
     branches:
-      - '**'
+      - master
   pull_request:
-    branches:
-      - '**'
-
-permissions:
-  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: 22
           cache: yarn
-
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-
       - name: Build VuePress site
         run: yarn build
