Enable force push for gh-pages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         with:
+          force_orphan: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .vuepress/dist
-          publish_branch: gh_pages
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
